# my-arithmetic-tpuser

./: .gitlab-ci.yml  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: GitlabSync.yml  deploy.yml  develop.yml  pylint.yml
docs/: conf.py  index.rst
docs/source/: modules.rst  my_arithmetic_tpuser.rst  tests.rst
my_arithmetic_tpuser/: __init__.py  functions.py
tests/: test_functions.py
