[tool.poetry]
name = "my-arithmetic-tpuser"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"
tox = "3.4.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"


[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
